chore(release): Studio 4.2.1-beta.3
